alteração do conteúdo visual

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
         
         <section class="conteudo-secundario">
-            <h3 class="conteudo-secundario-titulo">O Traje</h3>
+            <h3 class="conteudo-secundario-titulo">Curiosidades</h3>
             <p class="conteudo-secundario-paragrafo">Aranhabôs ajudam Peter/Otto na patrulha</p>
             <P class="conteudo-secundario-paragrafo">A inspiração para o traje vem de algumas artes conceituais não utilizada de Alex Ross</P>
         </section>
